GMT/python dictionary data structure.txt
PS C:\Users\SIBI> python
Python 3.11.4 (tags/v3.11.4:d2340ef, Jun  7 2023, 05:45:37) [MSC v.1934 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>>
>>> d={}
>>> type(d)
<class 'dict'>
>>>
>>>
>>>
>>> d=dict()
>>> type(d)
<class 'dict'>
>>>
>>>
>>> d[1]='hello'
>>> d
{1: 'hello'}
>>>
>>> d[2]='hii'
>>> d
{1: 'hello', 2: 'hii'}
>>>
>>>
>>> d[3]='byeee'
>>> de
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'de' is not defined. Did you mean: 'd'?
>>> d
{1: 'hello', 2: 'hii', 3: 'byeee'}
>>> #we can create dictionary when we know the data in advance
>>>
>>> d
{1: 'hello', 2: 'hii', 3: 'byeee'}
>>>
>>>
>>>
>>>
>>>
>>>
>>>
>>>
>>>
>>> #we can create dictionary when we know the data in advance
>>> #for example
>>>
>>>
>>> d={1:'goa', 2:'kerala', 3:'punjab'}
>>> d
{1: 'goa', 2: 'kerala', 3: 'punjab'}
>>>
>>>
>>>
>>> #we can access data in the dictionary by using key values
>>> for example
  File "<stdin>", line 1
    for example
               ^
SyntaxError: invalid syntax
>>>
>>>
>>>
>>> #we can access data in the dictionary by using key values
>>> #for example
>>>
>>> d
{1: 'goa', 2: 'kerala', 3: 'punjab'}
>>>
>>> print(d[1])
goa
>>> print(d[5])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
KeyError: 5
>>>
>>> #we will get error when the specific key is not available
>>>






Program to enter name and percentage marks in a dictionary and display information on the screen.

rec={}
n=int(input('Number of students:'))
i=1
while i<=n:
	name=input('Enter name:')
	marks=input('% of marks:')
	rec[name] =marks
	i=i+1
print('Name of the student','\t mark %')
for x in rec:
	print('\t', x, '\t\t', rec[x] )

output:

	C:\Users\SIBI\Documents>marks.py
Number of students:2
Enter name:kalai
% of marks:89
Enter name:kishore
% of marks:78
Name of the student      mark %
         kalai   89
         kishore         78







